完成所有监控API
