# server/dao/stock.go
@@ -6,26 +6,27 @@ import (
 	"taylors/model"
 )
 
-type newStock struct {
+type stockModel struct {
 	Db *gorm.DB
 }
 
-func newStockDao() *newStock {
+func newStockDao() *stockModel {
 	stock := &model.Stock{}
-	return &newStock{Db: global.GVA_DB.Model(stock)}
+	global.GVA_DB.Model(&model.Stock{}).AddIndex("base_index", "symbol", "name", "exchange", "code")
+	return &stockModel{Db: global.GVA_DB.Model(stock)}
 }
 
-func (dao *newStock) Save(stock model.Stock) (err error) {
+func (dao *stockModel) Save(stock model.Stock) (err error) {
 	err = dao.Db.Save(&stock).Error
 	return
 }
 
-func (dao *newStock) FindBySymbol(symbol string) (stockList []*model.Stock, err error) {
+func (dao *stockModel) FindBySymbol(symbol string) (stockList []*model.Stock, err error) {
 	err = dao.Db.Where("symbol = ? ", symbol).Order("create_time desc").Find(&stockList).Error
 	return
 }
 
-func (dao *newStock) Max() (maxId int64, err error) {
+func (dao *stockModel) Max() (maxId int64, err error) {
 	type C struct {
 		MaxId int64 `gorm:"column:max_id"`
 	}
