# server/docs/swagger.json
@@ -1500,10 +1500,10 @@
                 "tags": [
                     "Stock"
                 ],
-                "summary": "获取监控列表",
+                "summary": "获取所有列表",
                 "parameters": [
                     {
-                        "description": "获取监控列表",
+                        "description": "获取所有列表",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -1515,6 +1515,82 @@
                 "responses": {
                     "200": {
                         "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/monitor/add": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "StockMonitor"
+                ],
+                "summary": "添加监控",
+                "parameters": [
+                    {
+                        "description": "添加监控",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AddMonitorReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"添加监控成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/monitor/del": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "StockMonitor"
+                ],
+                "summary": "删除监控",
+                "parameters": [
+                    {
+                        "description": "删除监控",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.DelMonitorReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"删除监控成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -1536,23 +1612,88 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Stock"
+                    "StockMonitor"
                 ],
                 "summary": "获取监控列表",
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/monitor/one": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "StockMonitor"
+                ],
+                "summary": "获取监控",
                 "parameters": [
                     {
-                        "description": "获取监控列表",
+                        "description": "获取监控",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.MonitorListReq"
+                            "$ref": "#/definitions/request.MonitorOneReq"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/monitor/update": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "StockMonitor"
+                ],
+                "summary": "更新监控",
+                "parameters": [
+                    {
+                        "description": "更新监控",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateMonitorReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"更新监控成功\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -1938,6 +2079,14 @@
                 }
             }
         },
+        "config.Cron": {
+            "type": "object",
+            "properties": {
+                "spec_all": {
+                    "type": "string"
+                }
+            }
+        },
         "config.JWT": {
             "type": "object",
             "properties": {
@@ -1959,6 +2108,14 @@
                     "type": "string"
                 },
                 "stdout": {
+                    "type": "string"
+                }
+            }
+        },
+        "config.Module": {
+            "type": "object",
+            "properties": {
+                "crawler": {
                     "type": "string"
                 }
             }
@@ -2034,6 +2191,10 @@
                     "type": "object",
                     "$ref": "#/definitions/config.Casbin"
                 },
+                "cron": {
+                    "type": "object",
+                    "$ref": "#/definitions/config.Cron"
+                },
                 "jwt": {
                     "type": "object",
                     "$ref": "#/definitions/config.JWT"
@@ -2041,6 +2202,10 @@
                 "log": {
                     "type": "object",
                     "$ref": "#/definitions/config.Log"
+                },
+                "module": {
+                    "type": "object",
+                    "$ref": "#/definitions/config.Module"
                 },
                 "mysql": {
                     "type": "object",
@@ -2387,6 +2552,20 @@
                 }
             }
         },
+        "request.AddMonitorReq": {
+            "type": "object",
+            "properties": {
+                "monitor_high": {
+                    "type": "number"
+                },
+                "monitor_low": {
+                    "type": "number"
+                },
+                "symbol": {
+                    "type": "string"
+                }
+            }
+        },
         "request.AllDetailListReq": {
             "type": "object",
             "properties": {
@@ -2445,6 +2624,14 @@
                 }
             }
         },
+        "request.DelMonitorReq": {
+            "type": "object",
+            "properties": {
+                "symbol": {
+                    "type": "string"
+                }
+            }
+        },
         "request.GetById": {
             "type": "object",
             "properties": {
@@ -2453,14 +2640,11 @@
                 }
             }
         },
-        "request.MonitorListReq": {
+        "request.MonitorOneReq": {
             "type": "object",
             "properties": {
-                "symbol_list": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "symbol": {
+                    "type": "string"
                 }
             }
         },
@@ -2555,14 +2739,37 @@
         "request.StockTopListReq": {
             "type": "object",
             "properties": {
-                "capital_end": {
+                "marketCapitalMax": {
                     "type": "number"
                 },
-                "capital_start": {
+                "marketCapitalMin": {
                     "type": "number"
                 },
-                "data_size": {
+                "percentMax": {
+                    "type": "number"
+                },
+                "percentMin": {
+                    "type": "number"
+                },
+                "volume_ratio_max": {
+                    "type": "number"
+                },
+                "volume_ratio_min": {
+                    "type": "number"
+                }
+            }
+        },
+        "request.UpdateMonitorReq": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "integer"
+                },
+                "monitor_high": {
+                    "type": "number"
+                },
+                "monitor_low": {
+                    "type": "number"
                 }
             }
         },
